# hyprclip

./: Cargo.toml  LICENSE  README.md  build.sh
src/: app.rs  main.rs  persistence.rs  settings.rs
src/clipboard/: manager.rs  mod.rs
src/models/: clipboard_item.rs  mod.rs
src/ui/: clipboard_list.rs  main_window.rs  mod.rs
src/utils/: mod.rs
