[package]
name = "hyprclip"
version = "1.0.0"
edition = "2021"
description = "A clipboard history manager for Hyprland"
license = "GPL-3.0"
repository = "https://github.com/SterTheStar/hyprclip"
authors = ["SterTheStar"]
readme = "README.md"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
glib = { package = "glib", version = "0.20" }
gdk-pixbuf = "0.20"
gio = "0.20"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
gtk4-layer-shell = "0.5"
dirs-next = "2"

[package.metadata.deb]
maintainer = "SterTheStar <ster@hyprclip>"
copyright = "2026, SterTheStar"
license-file = ["LICENSE", "4"]
extended-description = "A clipboard history manager for Hyprland with Wayland layer-shell support."
depends = "libgtk-4-1, libadwaita-1-0, libgtk4-layer-shell-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/hyprclip", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hyprclip", dest = "/usr/bin/hyprclip", mode = "0755" },
]
requires = { gtk4 = ">= 4.0", libadwaita = ">= 1.0", gtk4-layer-shell = ">= 0.5" }
